AP-12241: Change default settings of the Partitioning node
AP-12241 (Change default settings of the Partitioning nodes)
https://knime-com.atlassian.net/browse/AP-12241