@@ -84,6 +84,8 @@ import org.knime.core.node.util.ColumnSelectionComboxBox;
 public class SparkSamplingNodeDialogPanel extends JPanel {
     private static final long serialVersionUID = 1L;
 
+    private final SparkSamplingNodeSettings m_settings = new SparkSamplingNodeSettings();
+
     private final JRadioButton m_absoluteButton =
             new JRadioButton("Absolute   ");
 
@@ -278,41 +280,40 @@ public class SparkSamplingNodeDialogPanel extends JPanel {
      */
     public void loadSettingsFrom(final NodeSettingsRO settings,
             final DataTableSpec spec) throws NotConfigurableException {
-        SparkSamplingNodeSettings sets = new SparkSamplingNodeSettings();
         try {
-            sets.loadSettingsFrom(settings, true);
+            m_settings.loadSettingsFrom(settings, true);
         } catch (InvalidSettingsException ise) {
             assert false : "The method should not throw an exception.";
         }
 
-        if (sets.countMethod() == SparkSamplingNodeSettings.CountMethods.Relative) {
+        if (m_settings.countMethod() == SparkSamplingNodeSettings.CountMethods.Relative) {
             m_relativeButton.doClick();
         } else {
             m_absoluteButton.doClick();
         }
 
-        m_relativeSpinner.setValue(new Double(sets.fraction() * 100));
-        m_absoluteSpinner.setValue(Integer.valueOf(sets.count()));
-        m_randomSampling.setSelected(sets.samplingMethod().equals(
+        m_relativeSpinner.setValue(new Double(m_settings.fraction() * 100));
+        m_absoluteSpinner.setValue(Integer.valueOf(m_settings.count()));
+        m_randomSampling.setSelected(m_settings.samplingMethod().equals(
                 SamplingMethods.Random));
-        m_stratifiedSampling.setSelected(sets.samplingMethod().equals(
+        m_stratifiedSampling.setSelected(m_settings.samplingMethod().equals(
                 SamplingMethods.Stratified));
-        m_linearSampling.setSelected(sets.samplingMethod().equals(
+        m_linearSampling.setSelected(m_settings.samplingMethod().equals(
                 SamplingMethods.Linear));
-        m_firstSampling.setSelected(sets.samplingMethod().equals(
+        m_firstSampling.setSelected(m_settings.samplingMethod().equals(
                 SamplingMethods.First));
 
-        if (sets.seed() != null) {
+        if (m_settings.seed() != null) {
             m_useSeedChecker.setSelected(true);
-            m_seedField.setText(sets.seed().toString());
+            m_seedField.setText(m_settings.seed().toString());
         } else {
             m_useSeedChecker.setSelected(false);
         }
 
         try {
-            m_classColumn.update(spec, sets.classColumn());
+            m_classColumn.update(spec, m_settings.classColumn());
             m_stratifiedSampling.setEnabled(true);
-            m_classColumn.setEnabled(sets.samplingMethod().equals(
+            m_classColumn.setEnabled(m_settings.samplingMethod().equals(
                     SamplingMethods.Stratified));
         } catch (NotConfigurableException ex) {
             // no nominal value column, so disable stratified sampling
@@ -321,8 +322,8 @@ public class SparkSamplingNodeDialogPanel extends JPanel {
             m_stratifiedSampling.setEnabled(false);
         }
 
-        m_exactSampling.setSelected(sets.exactSampling());
-        m_withReplacement.setSelected(sets.withReplacement());
+        m_exactSampling.setSelected(m_settings.exactSampling());
+        m_withReplacement.setSelected(m_settings.withReplacement());
     }
 
     /**
@@ -331,36 +332,43 @@ public class SparkSamplingNodeDialogPanel extends JPanel {
      * @param settings the object to write to
      */
     public void saveSettingsTo(final NodeSettingsWO settings) {
-        SparkSamplingNodeSettings sets = new SparkSamplingNodeSettings();
         if (m_relativeButton.isSelected()) {
-            sets.countMethod(SparkSamplingNodeSettings.CountMethods.Relative);
+            m_settings.countMethod(SparkSamplingNodeSettings.CountMethods.Relative);
         } else {
-            sets.countMethod(SparkSamplingNodeSettings.CountMethods.Absolute);
+            m_settings.countMethod(SparkSamplingNodeSettings.CountMethods.Absolute);
         }
 
-        sets.fraction(((Double)m_relativeSpinner.getValue()).doubleValue() / 100);
-        sets.count(((Integer)m_absoluteSpinner.getValue()).intValue());
+        m_settings.fraction(((Double)m_relativeSpinner.getValue()).doubleValue() / 100);
+        m_settings.count(((Integer)m_absoluteSpinner.getValue()).intValue());
         if (m_randomSampling.isSelected()) {
-            sets.samplingMethod(SamplingMethods.Random);
+            m_settings.samplingMethod(SamplingMethods.Random);
         } else if (m_stratifiedSampling.isSelected()) {
-            sets.samplingMethod(SamplingMethods.Stratified);
+            m_settings.samplingMethod(SamplingMethods.Stratified);
         } else if (m_linearSampling.isSelected()) {
-            sets.samplingMethod(SamplingMethods.Linear);
+            m_settings.samplingMethod(SamplingMethods.Linear);
         } else if (m_firstSampling.isSelected()) {
-            sets.samplingMethod(SamplingMethods.First);
+            m_settings.samplingMethod(SamplingMethods.First);
         }
 
         if (m_useSeedChecker.isSelected()) {
-            sets.seed(new Long(m_seedField.getValue().toString()));
+            m_settings.seed(new Long(m_seedField.getValue().toString()));
         } else {
-            sets.seed(null);
+            m_settings.seed(null);
         }
 
-        sets.classColumn(m_classColumn.getSelectedColumn());
+        m_settings.classColumn(m_classColumn.getSelectedColumn());
 
-        sets.exactSampling(m_exactSampling.isSelected());
-        sets.withReplacement(m_withReplacement.isSelected());
+        m_settings.exactSampling(m_exactSampling.isSelected());
+        m_settings.withReplacement(m_withReplacement.isSelected());
 
-        sets.saveSettingsTo(settings);
+        m_settings.saveSettingsTo(settings);
+    }
+
+    /**
+     * @return the settings
+     * @since 4.1
+     */
+    public final SparkSamplingNodeSettings getSettings() {
+        return m_settings;
     }
 }
